# krbtray

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
data/: krbtray.desktop.in
debian/: changelog  control  copyright  rules
po/: de.po  en_US.po  es.po  fr.po  krbtray.pot
src/: app.c  app.h  kerberos.c  kerberos.h  keyring.c  keyring.h  kinit_dialog.c  kinit_dialog.h  main.c  notify.c  notify.h  passwd_dialog.c  passwd_dialog.h  prefs.c  prefs.h  tray.c  tray.h
